--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ legend {
 
 input {
     margin: .4rem; background-color: rgb(250, 248, 219);
+    margin-left: ;
 }
 
 textarea {
@@ -21,6 +22,7 @@ textarea {
 button {
     margin-top: 10px;
     background-color: black; color: rgb(253, 253, 253);
+    margin-left: 80px;
 }
 
 label {
